# Created 2017-03-16 Thu 04:58
#+OPTIONS: html-link-use-abs-url:nil html-postamble:t
#+OPTIONS: html-preamble:t html-scripts:t html-style:t
#+OPTIONS: html5-fancy:nil tex:t
#+OPTIONS: ^:{} H:2
#+TITLE: PBench release notes
#+HTML_DOCTYPE: xhtml-strict
#+HTML_CONTAINER: div
#+KEYWORDS: pbench
#+HTML_LINK_HOME: 
#+HTML_LINK_UP: 
#+HTML_MATHJAX: 
#+HTML_HEAD_EXTRA: 
#+SUBTITLE: 
#+INFOJS_OPT: 
#+LATEX_HEADER: 

* Version 0.42

** Installation                                                    :external:
There are no installation changes in this release: see the
[[file:../agent/installation.org][Installation Instructions]] for how to install or update.

After installation or update, you should have version 0.42-1gcf7a941
of the pbench-agent RPM installed.

** agent

*** Backward incompatibilities
None known.

*** Bug fixes and enhancements

User-visible changes include:

- HAProxy OCP plugin has been merged
- openshift-metrics tool has been merged
- pbench-clear-tools regained its --remote option (it was lost some time ago).
- pbench-uperf post-processing catches more errors and recovers much better
  than before.

One thing that did not make it is the JSON output for =pbench-fio=:
there were some problems which we didn't have time to address in this
cycle. It will be in v0.43.

** server

Indexing work has been proceeding on a branch. It has not been merged onto the master
branch yet and is not part of this release. The plan is to merge it after the release and
deploy it with the next release.

The server has seen fixes for installing into different environments.

*** Instructions                                                   :external:
TBD.

** web-server
:PROPERTIES:
:CUSTOM_ID: web-server-0.42
:END:
The pbench-web-server RPM has been updated with scatterplot support
and a number of fixes.

If you have it installed, you will want to update:
#+BEGIN_EXAMPLE
dnf clean expire-cache
dnf update pbench-web-server
#+END_EXAMPLE