@@ -1,4 +1,4 @@
-# Created 2017-03-16 Thu 04:58
+# Created 2017-03-16 Thu 05:10
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t
 #+OPTIONS: html-preamble:t html-scripts:t html-style:t
 #+OPTIONS: html5-fancy:nil tex:t
@@ -18,6 +18,9 @@
 * Version 0.42
 
 ** Installation                                                    :external:
+N.B. COPR has deleted the Fedora 23 chroot, so we can no longer
+produce Fedora 23 packages; Fedora 23 is no longer supported.
+
 There are no installation changes in this release: see the
 [[file:../agent/installation.org][Installation Instructions]] for how to install or update.
 
